[package]
name = "tine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arc4 = "0.1.0"
async-trait = "0.1.77"
bitflags = "2.4.2"
byteorder = "1.4.3"
colored = "2.1.0"
flate2 = "1.0.24"
futures = "0.3.21"
hmac-sha = "0.6.1"
num-bigint = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha-1 = "0.9.8"
tentacli = "8.0.5"
tokio = { version = "1", features = ["sync", "net", "io-util", "macros", "time", "rt-multi-thread"] }
num-traits = "0.2.18"